# a2ui-demo

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  package-lock.json  slides.pptx
agent/: README.md  __main__.py  a2ui_examples.py  a2ui_templates.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  test_prompts.py
agent/lib/: __init__.py
agent/lib/a2ui/extension/: __init__.py
client/shell/: app.ts  client.ts  components.html  index.html  package-lock.json  package.json  styleguide.ts  tsconfig.json
client/shell/.wireit/6275696c643a747363/: fingerprint  manifest
client/shell/configs/: restaurant.ts  tech.ts
client/shell/theme/: default-theme.ts
client/shell/ui/: canvas.ts  sidebar.ts
renderers/lit/.wireit/6275696c643a747363/: fingerprint  manifest
renderers/lit/src/0.8/ui/: surface.ts
resources/: Demo2_LOG.md
